--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,20 @@
 {
   "name": "Casino Tracker",
-  "short_name": "Casino",
+  "short_name": "CasinoTracker",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#0b1220",
-  "theme_color": "#0ea5e9",
+  "background_color": "#0d1117",
+  "theme_color": "#0a3d62",
   "icons": [
-    { "src": "icons/icon-192.png", "type": "image/png", "sizes": "192x192" },
-    { "src": "icons/icon-512.png", "type": "image/png", "sizes": "512x512" }
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
